# talon

./: .gitignore  .travis.yml  10-ngts-m06-mount.rules  10-onemetre-mount.rules  CMakeLists.txt  Makefile  README  README.md  onemetre-talon.spec  rockit-talon.spec  superwasp-talon.spec
archive/: CMakeLists.txt  config  setvars  setvars.csh
archive/catalogs/: README
archive/config/: basic.cmc  camera.cfg  camera_petita.cfg  cover.cfg  csimc.cfg  csimc.cfg.ngts  csimc.cfg.onemetre  dome.cfg  dome_commhub.cfg  dome_csi.cfg  filter.cfg  find.cmc  focus.cfg  focus.cfg.ngts  focus.cfg.onemetre  gpsd.cfg  home.cfg  home.cfg.ngts  home.cfg.onemetre  home_backup.cfg  ip.cfg  lights.cfg  logo.xpm  logocm2.xpm  logotorus.xpm  microcom  nodeCover.cmc  nodeDec.cmc  nodeDome.cmc  nodeFilter.cmc  nodeFocus.cmc  nodeHA.cmc  telescoped.cfg  telescoped.cfg.ngts  telescoped.cfg.onemetre  telescoped.mesh  telescoped.mesh.onemetre  telsched.cfg  telsched.cfg.ngts  telsched.cfg.onemetre  (+1 more)
archive/config_sim/: cover.cmc  csimc.cfg  gpsd.cfg  rs.rs_trantm
archive/config_sqft/: FocusTemp.dat.old  ap8b.ini  basic.cmc  camera.cfg  dome_commhub.cfg  dome_csi.cfg  fes.sh  filter.cfg  focus.cfg  home.cfg  lights.cmc  nodeHA.cmc  telescoped.cfg  telsched.cfg
archive/config_tjo/: FocusTemp.0  FocusTemp.1000  FocusTemp.500  camera.cfg  camera_backup.cfg  cover.cfg  csimc.cfg  filter.cfg  focus.cfg  home.cfg  lights.cfg  nodeCover.cmc  nodeDec.cmc  nodeDome.cmc  nodeHA.cmc  telescoped.mesh
archive/onemetre_config/: README  boot.cfg  cover.cfg  csimc.cfg  dome.cfg  focus.cfg  home.cfg  telescoped.cfg  telsched.cfg
archive/sqft/: camera.cfg  cover.cmc  csimc.cfg  home.cfg  nodeDome.cmc  wx.cfg
archive/superwasp_config/: basic.cmc  boot.cfg  camera.cfg  cover.cfg  csimc.cfg~  dome.cfg  ecsd.cfg  filter.cfg  find.cmc  focus.cfg  gpsd.cfg  gpsd.cfg~  home.cfg  home.cfg~  ip.cfg  lights.cfg  nodeDec.cmc  nodeDome.cmc  nodeFocus.cmc  nodeHA.cmc  telescoped.cfg  telescoped.cfg~  telescoped.mesh  telsched.cfg  telsched.cfg~  virtual_dome.cfg  virtual_home.cfg  virtual_telescoped.cfg  wx.cfg
install_scripts/: CMakeLists.txt  postinstall  postinstall_as_root  preinstall  preinstall_as_root  talon_alias  tf  uninstall
install_scripts/etc/: rc.local
install_scripts/ldconfig/: talon.conf
install_scripts/profile.d/: talon.sh
install_scripts/udev/: andor.rules  fliusb.rules  talon.rules
src/daemons/camerad/: CMakeLists.txt  E1  Makefile  README  camerad  camerad.c  takepic
src/daemons/csimcd/: CMakeLists.txt  CMakeLists.txt~  Makefile  README  csimcd.c
src/daemons/joystickd/: CMakeLists.txt  Makefile  fifotalk.c  joystickd.c  readjoy.c
src/daemons/telescoped/: .directory  CMakeLists.txt  Makefile  README  axes.c  basic.cmc  cover.c  csimc.c  csimc.cfg  dome.c  dome_commhub.c  dome_csi.c  fifoio.c  filter.c  find.cmc  fli_filter.c  focus.c  lights.c  mountcor.c  nodeDec.cmc  nodeDome.cmc  nodeHA.cmc  powerfail.c  sbig_filter.c  tel.c  teled.h  telescoped.c  virmc.c  virmc.h
src/daemons/telrun/: CMakeLists.txt  Makefile  README  calimagePV  fifoio.c  fileio.c  pipeline  pipeline.cfg  pr_bias.c  pr_flat.c  pr_new_bias.c  pr_new_flat.c  pr_new_thermal.c  pr_regscan.c  pr_thermal.c  telrun.c  telrun.h
src/daemons/wxd/: CMakeLists.txt  Makefile  README  davis.c  dd.h  digitemp.c  page.c  petebros.c  rainwise.c  url.c  wxd.c
src/daemons/xtrackd/: CMakeLists.txt  xtrackd.c
src/libs/astro/: CMakeLists.txt  Imakefile  Makefile  Makefile.smple  P_.h  README  aa_hadec.c  aberration.c  actan.c  airmass.c  anomaly.c  ap_as.c  astro.h  auxil.c  chap95.c  chap95.h  chap95_data.c  circum.c  circum.h  comet.c  dbfmt.c  deep.c  deepconst.h  deltat.c  earthsat.c  eq_ecl.c  eq_gal.c  formats.c  helio.c  libration.c  misc.c  mjd.c  moon.c  mooncolong.c  nutation.c  obliq.c  parallax.c  plans.c  precess.c  preferences.h  (+18 more)
src/libs/camera/: CMakeLists.txt  ccd_andor.c  ccd_apogee.c  ccd_fli.c  ccd_ocaas.c  ccd_sbig.c  ccd_server.c  ccdcamera.c  ccddrivers.h  ccdshared.h
src/libs/fits/: CMakeLists.txt  Makefile  Makefile.bzero  README  align2fits.c  edgeStats.c  filters.c  fits.c  fits.h  fitscorr.c  fitscorr.h  fitsip.blob  fitsip.borderwalk  fitsip.c  fitsip.c.from.2.0.11CD  fitsip.c.from.elwood  fitsip.good  fitsip.good2  fitsip.good3  fitsip.good4  fitsip.good5  fitsip.new  ip.cfg  ip.cfg.good
src/libs/misc/: CMakeLists.txt  Makefile  Makefile.tests  README  catalogs.c  catalogs.h  ccd_apogee.c  ccd_auxcam.c  ccd_fli.c  ccd_sbig.c  ccd_server.c  ccd_template.c  ccdcamera.c  ccdcamera.h  ccddrivers.h  ccdshared.c  cliserv.c  cliserv.h  configfile.c  configfile.h  crackini.c  crackini.h  csimc.c  csimc.h  dio.h  focustemp.c  focustemp.h  funcmax.c  gaussfit.c  lstsqr.c  lstsqr.h  main.ftp  misc.c  misc.h  newton.c  pc39.h  photstd.c  photstd.h  rot.c  rot.h  (+16 more)
src/libs/wcs/: CMakeLists.txt  Makefile  README  align2wcs.c  checkwcsfits.c  delwcsfits.c  findreg.c  findregd.c  findregd.h  resetwcs.c  setwcsfits.c  setwcsfitsd.h  wcs.h  worldpos.c  xyradec.c
src/scripts/: CMakeLists.txt  get-catalogs  killTel  killp  pdu_cover_motors_off  pdu_cover_motors_on  pdu_dome_controler_off  pdu_dome_controler_on  pdu_dome_power_off  pdu_dome_power_on  pdu_nominal_computer_off  pdu_nominal_computer_on  pdu_others_off  pdu_others_on  pdu_redundant_computer_off  pdu_redundant_computer_on  pdu_status  pdu_telescope_12v_power_off  pdu_telescope_12v_power_on  pdu_telescope_80v_power_off  pdu_telescope_80v_power_on  pdu_telescope_mixed_power_off  pdu_telescope_mixed_power_on  pdu_webcam_power_off  pdu_webcam_power_on  startTel
src/sdk/andor/: CMakeLists.txt  INSTALL  install_andor
src/sdk/apogee/: CMakeLists.txt  Makefile  ap1.ini  ap7.ini  apapi.c  apccd.h  apdata.c  apdata.h  apdscan.c  apglob.h  aplinux.c  aplinux.h  aplow.c  aplow.h  log  main.c  tryit
src/sdk/sbig/: CMakeLists.txt  README.txt  app  csbigcam.cpp  csbigimg.h  install_sbig  sbig  sbig.usermap  testapp  testmain.cpp
src/utils/csimc/: CMakeLists.txt  Makefile  README  boot.c  csimc.c  csimcio.c  eintrio.c  el.c  el.h  mc.h
src/utils/digitemp/: ds1820.h  (+5 more)
(+616 files in other folders)
