cmake_minimum_required (VERSION 2.6)
project (archive)

set(ARCHIVE_DIR ${CORE_INSTALL_DIR}/archive)

install(DIRECTORY comm DESTINATION ${CORE_INSTALL_DIR} DIRECTORY_PERMISSIONS
        OWNER_READ OWNER_WRITE OWNER_EXECUTE
        GROUP_READ GROUP_WRITE GROUP_EXECUTE
        WORLD_READ WORLD_WRITE WORLD_EXECUTE)

install(DIRECTORY telrun DESTINATION ${ARCHIVE_DIR})
install(DIRECTORY config DESTINATION ${ARCHIVE_DIR} FILE_PERMISSIONS
        OWNER_READ OWNER_WRITE OWNER_EXECUTE
        GROUP_READ GROUP_WRITE GROUP_EXECUTE
        WORLD_READ WORLD_WRITE WORLD_EXECUTE)

install(DIRECTORY catalogs DESTINATION ${ARCHIVE_DIR})
install(DIRECTORY logs DESTINATION ${ARCHIVE_DIR} DIRECTORY_PERMISSIONS
        OWNER_READ OWNER_WRITE OWNER_EXECUTE
        GROUP_READ GROUP_WRITE GROUP_EXECUTE
        WORLD_READ WORLD_WRITE WORLD_EXECUTE)
